crates/strider-analyze/tests/snapshots/v3__arm_thumb__abi__eight_int_args.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "4" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "4" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "11" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "3" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "3" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "4" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "20" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\nr0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="init\nr2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "12" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "11" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
}
