crates/strider-analyze/tests/snapshots/v3__arm_thumb__abi__main.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x56c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x584:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "9" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "9" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" -> "9" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" -> "9" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xa:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "9" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x598:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" -> "17" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "17" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x16:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "17" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "24" -> "17" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "25" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "17" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x5a8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "25" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "29" -> "25" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0xb:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v30" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v30" [color="#888888", style=dashed];
  "v30" -> "25" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "32" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "25" -> "32" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x5b0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" -> "32" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "32" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" -> "32" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "38" -> "32" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "38" -> "32" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "39" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "32" -> "39" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v42" [color="#888888", style=dashed];
  "v42" -> "39" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v43" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v43" [color="#888888", style=dashed];
  "v43" -> "39" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v44" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v44" [color="#888888", style=dashed];
  "v44" -> "39" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "41" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v45" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v45" [color="#888888", style=dashed];
  "v45" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "32" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "47" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x1ffffffd4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "40" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "32" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v50" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v50" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "51" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "37" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "51" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "52" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x1ffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "25" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v59" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v59" [color="#888888", style=dashed];
  "v59" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "17" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "58" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "17" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "61" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v62" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v62" [color="#888888", style=dashed];
  "v62" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "63" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "61" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "63" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "64" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "66" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "9" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v67" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v67" -> "64" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x1ffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "63" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "10" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "71" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0xa:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "71" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "74" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v75" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v75" -> "71" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "76" -> "71" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x9:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "74" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "77" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v78" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v78" -> "74" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "79" -> "74" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "79" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "80" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v81" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v81" [color="#888888", style=dashed];
  "v81" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "80" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "77" [label="StackStore u32\n→ ram[sp - 64]", shape=box3d, fillcolor="#20182a"];
  "82" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v83" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v83" -> "77" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "84" -> "77" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "84" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0x1ffffffd8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "82" [label="StackStore u32\n→ ram[sp - 60]", shape=box3d, fillcolor="#20182a"];
  "1" -> "82" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v86" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v86" -> "82" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "87" -> "82" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "87" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "87" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "88" -> "87" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "88" [label="const 0x1ffffffdc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "89" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v90" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v90" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "91" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "91" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "89" [label="StackStore u32\n→ ram[sp - 60]", shape=box3d, fillcolor="#20182a"];
  "92" -> "89" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v93" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v93" -> "89" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "94" -> "89" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "94" [label="const 0x6:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "92" [label="StackStore u32\n→ ram[sp - 64]", shape=box3d, fillcolor="#20182a"];
  "95" -> "92" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v96" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v96" -> "92" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "97" -> "92" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "97" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "95" [label="StackStore u32\n→ ram[sp - 52]", shape=box3d, fillcolor="#20182a"];
  "98" -> "95" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v99" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v99" -> "95" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "100" -> "95" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "100" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "98" [label="StackStore u32\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "101" -> "98" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v102" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v102" -> "98" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "103" -> "98" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "103" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "101" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "104" -> "101" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v105" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v105" -> "101" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "106" -> "101" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "106" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "104" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "107" -> "104" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v108" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v108" -> "104" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "109" -> "104" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "109" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "107" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "110" -> "107" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v111" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v111" -> "107" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "112" -> "107" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "112" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "110" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
